--- a/index.html
+++ b/index.html
@@ -196,18 +196,18 @@
                                         </a>
                                     </div>
                                     <div class="col 2">
-                                        <a href="https://cyxw.mcts.cc/" target="_blank">
+                                        <a href="/sky" target="_blank">
                                             <div class="link-card cards">
                                                 <i class="iconfont icon-cloud"></i>
-                                                <span class="link-name">次元小屋</span>
+                                                <span class="link-name">星空</span>
                                             </div>
                                         </a>
                                     </div>
                                     <div class="col">
-                                        <a href="https://whr.mcts.cc/chat" target="_blank">
+                                        <a href="https://cloud66.top" target="_blank">
                                             <div class="link-card cards">
                                                 <i class="iconfont icon-music-list"></i>
-                                                <span class="link-name">留言板（我的）</span>
+                                                <span class="link-name">留言板</span>
                                             </div>
                                         </a>
                                     </div>
