--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
                                 <!--第二组-->
                                 <div class="row" style="margin-top: 1.5rem;">
                                     <div class="col">
-                                        <a href="https://whr.mcts.cc/chat/index2.html" target="_blank">
+                                        <a href="https://hh2022.cn" target="_blank">
                                             <div class="link-card cards">
                                                 <i class="iconfont icon-a-daohangzhiyindingwei-05"></i>
-                                                <span class="link-name">次元小屋留言板</span>
+                                                <span class="link-name">动漫站</span>
                                             </div>
                                         </a>
                                     </div>
