--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
     <script type="text/javascript"
         src="./js/pages.js">
     </script>
+<script src="https://player.lzti.com/api/player/1674998135119" id="myhk" key="1674998135119" m="1"></script>
 </body>
 
 </html>
