--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                         </a>
                                     </div>
                                     <div class="col 2">
-                                        <a href="https://whr.mcts.cc/about.html" target="_blank">
+                                        <a href="./about.html" target="_blank">
                                             <div class="link-card cards">
                                                 <i class="iconfont icon-z_shangpinheji"></i>
                                                 <span class="link-name">关于我</span>
@@ -226,7 +226,7 @@
                                         </a>
                                     </div>
                                     <div class="col">
-                                        <a href="https://whr.mcts.cc/feed.html" target="_blank">
+                                        <a href="./feed.png" target="_blank">
                                             <div class="link-card cards">
                                                 <i class="iconfont icon-lab"></i>
                                                 <span class="link-name">捐赠我</span>
