--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                                                 class="weekday">星期一</span><br><span class="time-text">00:00:00</span>
                                         </div>
                                         <div class="weather">
-                                            <span id="city_text">天气</span>&nbsp;
-                                            <span id="wea_text">加载失败</span>&nbsp;
+                                            <span id="#city_text">天气</span>&nbsp;
+                                            <span id="#wea_text"></span>&nbsp;
                                             <!-- <span id="win_text"></span>
                                             <span id="win_speed"></span> -->
                                         </div>
