--- a/index.html
+++ b/index.html
@@ -449,6 +449,35 @@
     <script type="text/javascript"
         src="./js/pages.js">
     </script>
+<!-- 现代写法(不支持 IE) -->
+<script>
+fetch('https://api.gmit.vip/Api/Weather',{
+    method:"post",
+    mode: 'cors',
+    headers: {
+        'Content-Type': 'application/json'
+    },
+    body:JSON.stringify({
+        format : 'json',
+        city : '长沙市',
+        scene : '1',
+    })
+}).then(
+    response => response.json()
+).then(
+    res => {
+        // 状态码 200 表示请求成功
+        if(res.data.code == 200){
+            console.log(res.data)
+        }else{
+            console.log(res.data)
+        }
+    }
+).catch(
+    console.error
+)
+</script>
+
 </body>
 
 </html>
