--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                               <div class="weather">
                                             <span id="city_text">天气</span>&nbsp;
                                             <span id="wea_text">加载失败</span>&nbsp;
-                                          
+                                          </div>
                                         </div>
                                         </div>
                                     </div>
