--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="message cards" id="switchmore">
                                 <div class="des" id="des"><i class="iconfont icon-yinhao-copy-copy"></i>
                                     <div class="des-title"><span id="change">Hello&nbsp;there&nbsp;!</span><br /><span
-                                            id="change1">一个建立于 22 世纪的小站，WHR个人页面</span></div>
+                                            id="change1">一个建立于 22 世纪的小站，王浩瑞的个人页面</span></div>
                                     <i class="iconfont icon-yinhao-copy"></i>
                                 </div>
                             </div>
