--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
             </div>
       <script src="https://player.lzti.com/api/player/1674998135119" id="myhk" key="1674998135119" m="1"></script>
         </main>
-        
+        <footer id="footer" class="fixed-bottom footer">
             <div id="lrc"></div>
-        
+        </footer>
    
     <!-- noscript -->
     <noscript>
